--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
   <!-- 100VH  -->
   <div id="welcome-section" class="section">
-    <h1>Tanner</h1>
+    <h1>Tanner Gaucher</h1>
+    <h3>Web Development: HTML, CSS, JS</h3>
+    <h3>Cryptocurrency and Decentralized Applicaitons:</h3> 
+    <h3>Solidity, Truffle, Web3.js</h3>
+    
   </div>
 
   <!-- 100VH  -->
